--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Layout Practice</string>
     <string name="message">Thanks for choosing our awesome blend tea.  Ho do you want it serving?</string>
+    <string name="temperature">Temperature:</string>
 </resources>
